--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
     "@next/font": "13.1.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -16,8 +21,12 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "next": "13.1.4",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-type-animation": "^2.1.2",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   }
 }
